--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
 
 	<p style="color:grey;"> {{ page.date | date: "%B %d, %Y" }} </p>
 
-	 <img width="575px" src="{{ page.image-link }}" style="border: 5px solid black" />
+	 <img width="575px" src="{{ site.baseurl }}{{ page.image-link }}" style="border: 5px solid black" />
 
 	<article>
 
