fixing css link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<link href="..\..\..\css/css.css" rel="stylesheet" type="text/css">
+<link href="{{ site.baseurl }}/css/css.css" rel="stylesheet" type="text/css">
 
 <div id="blog-content" class="grid_8">
 
