fixing image links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,15 +12,16 @@ layout: default
 
 	 <img width="575px" src="{{ site.baseurl }}/images/{{ page.image-link }}" style="border: 5px solid black" />
 
+
 	<article>
 
 	{{ content }}
 
 	</article>
 
-	<a href="..\index.html" style="color:blue;">Back to Blog</a>
+	<a href="{{ site.baseurl }}/index.html" style="color:blue;">Back to Blog</a>
 	<br><br>
-	<img src="bike-wheel-grey.png" width="35px">
+	<img src="{{ site.baseurl }}/bike-wheel-grey.png" width="35px">
 
 </div>
 
