--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 <div id="banner">
 
     <header>
-        <h1>Biking Acr<img src="images/bike-wheel.png" height="80" />ss </h1>
+        <h1>Biking Acr<img src="{{ site.baseurl }}/images/bike-wheel.png" height="80" />ss </h1>
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header>  
 
