--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,9 @@ layout: default
 
 	<p style="color:grey;"> {{ page.date | date: "%B %d, %Y" }} </p>
 
-	 <img width="575px" src="{{ site.baseurl }}/images/{{ page.image-link }}" style="border: 5px solid black" />
-
+	{% if page.image-link %}
+  	<img width="575px" src="{{ site.baseurl }}/images/{{ page.image-link }}" style="border: 5px solid black" />
+  	{% endif %}
 
 	<article>
 
