working on index md template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<div id="banner">
+<div id="banner" class="container_12">
 
     <header>
         <h1>Biking Acr<img src="{{ site.baseurl }}/images/bike-wheel.png" height="80" />ss </h1>
