added post excerpts to main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
   
 </head>
 
-<body>
+<body class="container_12">
 
-<div id="banner" class="container_12">
+<div id="banner">
 
     <header>
         <h1>Biking Acr<img src="{{ site.baseurl }}/images/bike-wheel.png" height="80" />ss </h1>
@@ -35,7 +35,8 @@
     </div>
 
 </div>
-        <div class="site">
+
+    <div id="blog-content" class="grid_8">
 
           {{ content }}
 
