--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <link href="css/css.css" rel="stylesheet" type="text/css">
-        <link href="css/960_12_col.css" rel="stylesheet" type="text/css">
+        <link href="{{ site.baseurl }}/css/css.css" rel="stylesheet" type="text/css">
+        <link href="{{ site.baseurl }}/css/960_12_col.css" rel="stylesheet" type="text/css">
         <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
