--- a/css/css.css
+++ b/css/css.css
@@ -108,11 +108,11 @@
 
     #blog-content{
         float: left;
-        padding-top: 40px;
+        padding-top: 30px;
     }
 
     #banner{
-        width=100%;
+        width:100%;
     }
 
     #navbar {
