--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
 
 	</article>
 
-	<a href="{{ site.baseurl }}/index.html" style="color:blue;">Back to Blog</a>
+	<a href="{{ site.baseurl }}/index.html">Back to Blog</a>
 	<br><br>
 	<img src="{{ site.baseurl }}/bike-wheel-grey.png" width="35px">
 	<br><br>
