changed navbar design and css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,9 @@
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header>  
 
-    <div>
-        <ul id="navbar">
+  <div class="grid_3" id="navbox">
+        <ul id="navbar" style="text-align:center;">
+            <li><img src="{{ site.baseurl }}/images/bike-wheel.png" height="20"/></li>
             <li><a href="{{ site.baseurl }}/index.html">Blog</a></li>
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
             <li><a href="{{ site.baseurl }}/map.html">Map Tracker</a></li>
@@ -34,9 +35,12 @@
         </ul>
     </div>
 
+    <div id="blog-content" class="grid_9">
+
+
 </div>
 
-    <div id="blog-content" class="grid_8">
+    <div id="blog-content" class="grid_9">
 
           {{ content }}
 
