--- a/css/css.css
+++ b/css/css.css
@@ -11,12 +11,13 @@
         background-color:rgb(32,89,150);
         color: white;
         text-align: left;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
+        border-radius: 20px;
+        border-radius: 20px;
     }
 
     article {
       max-width: 600px;
+      margin: 0 auto;
       text-align: left;
       line-height: 150%;
       font-size: 13pt;
@@ -51,6 +52,7 @@
     a {
         color: rgb(32,89,150);
         text-decoration: none;
+        position: relative;
     }
 
    a:hover {
@@ -58,11 +60,29 @@
         color:white;
     }
 
+    a:active {
+        top: 2px;
+    }
+
+    #navbox{
+        padding-top: 20px;
+    }
+
     #navbar li{
-        display: inline;
-        list-style-type: none;
+        /*display: inline;*/
+        /*list-style-type: none;*/
         padding: 10px 5px 10px 5px;
-        margin-right: 20px;
+        margin: 0px;
+    }
+
+    #navbar {
+        background-color: #000;
+        /*margin: 0 auto;*/
+        padding: 10px 0px 10px 0px;
+        font-size: 1.2em;
+        border-radius:20px;
+        border-radius:20px;
+        /*z-index: -1;*/
     }
 
     ul {
@@ -108,22 +128,7 @@
 
     #blog-content{
         float: left;
-        padding-top: 30px;
-    }
-
-    #banner{
-        width:100%;
-    }
-
-    #navbar {
-        background-color: #000;
-        text-align: left;
-        margin: 0 auto;
-        padding: 25px 0px 25px 25px;
-        font-size: 16px;
-        border-bottom-right-radius:20px;
-        border-bottom-left-radius:20px;
-        z-index: -1;
+        padding-top: 40px;
     }
 
     #social-media{
@@ -137,7 +142,7 @@
         display: inline;
     }
 
-	#mc_embed_signup {
+    #mc_embed_signup {
         font-size: 12px; 
         color: white;
         width: 250px; 
@@ -157,7 +162,7 @@
     }
 
     #mc-embedded-subscribe{
-        font-size:12px;
+        font-size:10px;
         margin: 0 auto;
         text-align: left;
     }
