--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header>  
 
-  <div class="grid_3" id="navbox">
+    <div class="grid_3" id="navbox">
         <ul id="navbar" style="text-align:center;">
             <li><img src="{{ site.baseurl }}/images/bike-wheel.png" height="50"/></li>
             <li><a href="{{ site.baseurl }}/index.html">Blog</a></li>
@@ -35,7 +35,10 @@
         </ul>
     </div>
 
-    <div id="blog-content" class="grid_9">
+    <div class="grid_1">
+    <div>
+
+    <div id="blog-content" class="grid_8">
 
           {{ content }}
 
