--- a/css/css.css
+++ b/css/css.css
@@ -48,7 +48,7 @@
     }
 
     a {
-        color: white;
+        color: rgb(32,89,150);
         text-decoration: none;
         position: relative;
     }
