taking out table

--- a/css/css.css
+++ b/css/css.css
@@ -2,6 +2,7 @@
     body {
         font-family: 'Droid Sans', sans-serif;
         background-color: rgb(211, 211, 211);;
+        color: black;
     }
 
     header {
