fix post template

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,9 @@ layout: default
 	{% if page.image-link %}
   	<img width="575px" src="{{ site.baseurl }}/images/{{ page.image-link }}" style="border: 5px solid black" />
   	{% endif %}
+  	{% if page.image-url %}
+  	<img width="575px" src="{{ site.baseurl }}/images/{{ page.image-url }}" style="border: 5px solid black" />
+  	{% endif %}
 
 	<article>
 
