--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
   	<img width="575px" src="{{ site.baseurl }}/images/{{ page.image-link }}" style="border: 5px solid black" />
   	{% endif %}
   	{% if page.image-url %}
-  	<img width="575px" src="{{ site.baseurl }}/images/{{ page.image-url }}" style="border: 5px solid black" />
+  	<img width="575px" src="{{ page.image-url }}" style="border: 5px solid black" />
   	{% endif %}
 
 	<article>
