--- a/css/css.css
+++ b/css/css.css
@@ -1,7 +1,7 @@
 
     body {
         font-family: 'Droid Sans', sans-serif;
-        background-color: rgb(211, 211, 211);;
+        background-color: rgb(226, 226, 226);
         color: black;
     }
 
@@ -9,7 +9,7 @@
         font-family: 'Fauna One', serif;
         padding: 20px;
         margin: 0 auto;
-        background-color:rgb(32,89,150);
+        background-color:rgb(0, 113, 235);
         color: white;
         text-align: left;
         border-radius: 20px;
@@ -49,7 +49,7 @@
     }
 
     a {
-        color: rgb(32,89,150);
+        color: rgb(17, 112, 213);
         text-decoration: none;
         position: relative;
     }
@@ -64,7 +64,7 @@
     }
 
     #navbox{
-        padding-top: 20px;
+        /*padding-top: 20px;*/
     }
 
     #navbar li{
@@ -128,7 +128,7 @@
 
     #blog-content{
         float: left;
-        padding-top: 20px;
+        /*padding-top: 20px;*/
         margin-left:55px;
     }
 
