--- a/css/css.css
+++ b/css/css.css
@@ -1,7 +1,7 @@
 
     body {
         font-family: 'Droid Sans', sans-serif;
-        background-color: rgb(226, 226, 226);
+        background-color: rgb(240, 240, 240);
         color: black;
     }
 
@@ -9,7 +9,7 @@
         font-family: 'Fauna One', serif;
         padding: 20px;
         margin: 0 auto;
-        background-color:rgb(0, 113, 235);
+        background-color:rgb(1, 95, 197);
         color: white;
         text-align: left;
         border-radius: 20px;
@@ -34,7 +34,7 @@
 
     h3 {
         font-family: 'Montserrat', sans-serif;
-        color: rgb(0, 113, 235);
+        color: rgb(1, 95, 197);
         font-weight: 700;
         font-size: 23pt;
         line-height:1;
@@ -42,21 +42,21 @@
 
     h4 {
         font-family: 'Montserrat', sans-serif;
-        color: rgb(0, 113, 235);
+        color: rgb(1, 95, 197);
         font-weight: 700;
         font-size: 16pt;
         line-height:1;
     }
 
     a {
-        color: rgb(0, 113, 235);
+        color: white;
         text-decoration: none;
         position: relative;
     }
 
    a:hover {
         text-decoration: none;
-        color:white;
+        color:rgb(1, 95, 197);
     }
 
     a:active {
@@ -76,7 +76,7 @@
     }
 
     #navbar {
-        background-color: #000;
+        background-color: #302E2E;
         /*margin: 0 auto;*/
         padding: 10px 0px 10px 0px;
         font-size: 1.2em;
