trying again for white links in navbox

--- a/css/css.css
+++ b/css/css.css
@@ -63,7 +63,7 @@
         top: 2px;
     }
 
-    #navbox a:link{
+    .navbox a:link{
         /*padding-top: 20px;*/
         color: rgb(1, 95, 197);
 
