--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header> 
 
-    <div class="grid_3" id="navbox">
+    <div class="grid_3" class="navbox">
         <ul id="navbar" style="text-align:center;">
             <li><img src="{{ site.baseurl }}/images/bike-wheel.png" height="50"/></li>
             <li><a href="{{ site.baseurl }}/index.html">Blog</a></li>
