--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,14 @@
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header> 
 
-    <div class="grid_3" class="navbox">
-        <ul id="navbar" style="text-align:center;">
+    <div class="grid_3">
+        <ul id="navbar" class="navbox" style="text-align:center;">
             <li><img src="{{ site.baseurl }}/images/bike-wheel.png" height="50"/></li>
-            <li><a id="nav-links" href="{{ site.baseurl }}/index.html">Blog</a></li>
-            <li><a id="nav-links" href="{{ site.baseurl }}/about.html">About</a></li>
-            <li><a id="nav-links" href="{{ site.baseurl }}/map.html">Map Tracker</a></li>
-            <li><a id="nav-links" href="{{ site.baseurl }}/photos.html">Photo Feed</a></li>
-            <li><a id="nav-links" href="{{ site.baseurl }}/gear.html">Gear List</a></li>
+            <li><a href="{{ site.baseurl }}/index.html">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/about.html">About</a></li>
+            <li><a href="{{ site.baseurl }}/map.html">Map Tracker</a></li>
+            <li><a href="{{ site.baseurl }}/photos.html">Photo Feed</a></li>
+            <li><a href="{{ site.baseurl }}/gear.html">Gear List</a></li>
         </ul>
     </div>
 
