heh no wonder….

--- a/css/css.css
+++ b/css/css.css
@@ -65,7 +65,7 @@
 
     .navbox a:link {
         /*padding-top: 20px;*/
-        color: rgb(1, 95, 197);
+        color: white;
     }
 
     #navlinks {
