--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     <div class="grid_3">
         <ul id="navbar" class="navbox" style="text-align:center;">
-            <li><img src="{{ site.baseurl }}/images/bike-wheel.png" height="50"/></li>
+            <li><img src="/images/bike-wheel.png" height="50"/></li>
             <li><a href="{{ site.baseurl }}/index.html">Blog</a></li>
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
             <li><a href="{{ site.baseurl }}/map.html">Map Tracker</a></li>
