--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <base href="http://www.example.com/">
+        <base href="http://www.bikingacrossthe.us/">
 
         <link href="{{ site.baseurl }}/css/css.css" rel="stylesheet" type="text/css">
         <link href="{{ site.baseurl }}/css/960_12_col.css" rel="stylesheet" type="text/css">
@@ -25,7 +25,7 @@
 
     <div class="grid_3">
         <ul id="navbar" class="navbox" style="text-align:center;">
-            <li><img src="images/bike-wheel.png" height="50"/></li>
+            <li><img src="/images/bike-wheel.png" height="50"/></li>
             <li><a href="{{ site.baseurl }}/index.html">Blog</a></li>
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
             <li><a href="{{ site.baseurl }}/map.html">Map Tracker</a></li>
