--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,11 @@
     <div class="grid_3">
         <ul id="navbar" class="navbox" style="text-align:center;">
             <li><img src="/images/bike-wheel.png" height="50"/></li>
-            <li><a href="{{ site.baseurl }}/index.html">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/about.html">About</a></li>
-            <li><a href="{{ site.baseurl }}/map.html">Map Tracker</a></li>
-            <li><a href="{{ site.baseurl }}/photos.html">Photo Feed</a></li>
-            <li><a href="{{ site.baseurl }}/gear.html">Gear List</a></li>
+            <li><a href="/index.html">Blog</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/map.html">Map Tracker</a></li>
+            <li><a href="/photos.html">Photo Feed</a></li>
+            <li><a href="/gear.html">Gear List</a></li>
         </ul>
     </div>
 
