fixing header image link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 <body class="container_12">
 
     <header>
-        <a href="{{ site.baseurl }}" style="color:white;"><h1>Biking Acr<img src="{{ site.baseurl }}/images/bike-wheel.png" height="80" />ss </h1></a>
+        <a href="{{ site.baseurl }}" style="color:white;"><h1>Biking Acr<img src="images/bike-wheel.png" height="80" />ss </h1></a>
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header> 
 
