fixing post links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,10 +9,10 @@ layout: default
 	<p style="color:grey;"> {{ page.date | date: "%B %d, %Y" }} </p>
 
 	{% if page.image-link %}
-  	<img width="575px" src="images/{{ page.image-link }}" style="border: 5px solid black" />
+  	<img width="575px" src="/images/{{ page.image-link }}" style="border: 5px solid black" />
   	{% endif %}
   	{% if page.image-url %}
-  	<img width="575px" src="{{ page.image-url }}" style="border: 5px solid black" />
+  	<img width="575px" src="/{{ page.image-url }}" style="border: 5px solid black" />
   	{% endif %}
 
 	<article>
