--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,25 +40,17 @@
 
     </div>
 
-<!--  I'll add a footer later:
-
-          <div class="footer">
-            <div class="contact">
+          <div class="footer" class="container_12">
+            <div class="grid_12">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://twitter.com/runsplorer" target="_blank" border="0px"><img src="icons/twitter.png" width="35px"></a>
+                <a href="https://www.facebook.com/jessica.mcelroy"target="_blank" border="0px"><img src="icons/facebook.png" width="35px"></a>
+                <a href="https://www.linkedin.com/pub/jessica-mcelroy/36/1a/a47"target="_blank" border="0px"><img src="icons/linkedin.png" width="35px"></a>
+                <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="icons/email.png" width="35px"></a>
               </p>
             </div>
           </div>
         </div>
--->
 
     </body>
 
