--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
 
     </div>
 
-          <div class="footer" class="container_12">
-            <div class="grid_12">
+          <div c class="container_12">
+            <div class="grid_12" class="footer">
               <p>
                 <a href="https://twitter.com/runsplorer" target="_blank" border="0px"><img src="icons/twitter.png" width="35px"></a>
                 <a href="https://www.facebook.com/jessica.mcelroy"target="_blank" border="0px"><img src="icons/facebook.png" width="35px"></a>
