--- a/_includes/photos.html
+++ b/_includes/photos.html
@@ -1,6 +1,6 @@
 <div>
     <h3> Live Photo Feed </h3>
-    <p>Here are the most recent photos from my Instagram feed. This page instantly updates every time I post a new photo on Instagram, so you'll be able to keep up with my adventures in real time while I am out on the road. I learned how to make this from a <a href="http://jlord.us/your-own-instagram-feed/" style="color:blue;">blog post</a> by Jessica Lord, an awesome JavaScript developer in Oakland.<br><br> If you don't see anything below, please be patient. The images are being pulled from a Google spreadsheet, so sometimes it takes a little while to load.</p>
+    <p>Here are the most recent photos from my Instagram feed. This page instantly updates every time I post a new photo on Instagram, so you'll be able to keep up with my adventures in real time while I am out on the road. I learned how to make this from a <a href="http://jlord.us/your-own-instagram-feed/" style="color:blue;">blog post</a>. <br><br> If you don't see anything below, please be patient. The images are being pulled from a Google spreadsheet, so sometimes it takes a little while to load.</p>
     
     <div id="instagram">
     <!-- this dude waits patiently to be filled with stuff -->   
